# the-manager

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backend/: package.json  (+1 more)
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/club/entities/: club.rs  mod.rs  player.rs  player_contract.rs  team.rs
crates/core/src/club/player/: attributes.rs  mod.rs  player.rs  position.rs  position_type.rs
crates/core/src/competition/entities/: competition.rs  league.rs  match.rs
crates/core/src/competition/value_objects/: mod.rs
crates/core/src/context/: simulation.rs
crates/core/src/shared/: attribute.rs  mod.rs  reputation.rs
crates/core/src/shared/value_objects/: attribute.rs  birth_date.rs  mod.rs  money.rs  person_name.rs  reputation.rs
crates/core/src/state/: game.rs  simulation.rs
crates/core/src/world/: mod.rs
crates/core/src/world/continent/: continent.rs  mod.rs
crates/core/src/world/entities/: continent.rs  federation.rs  nation.rs  stadium.rs
crates/core/src/world/federation/: federation.rs  mod.rs
crates/core/src/world/nation/: confederation.rs  mod.rs  nation.rs  nation_name.rs
crates/core/src/world/stadium/: mod.rs  stadium.rs  stadium_name.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__initial_schema.sql
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: save.rs
src-tauri/src/db/: connection.rs  migrations.rs
(+78 files in other folders)
