[package]
name = "the-manager"
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.93.1"
description = "A football management game"
authors = ["Victor Vasconcelos <vvasconcelos.dev@gmail.com>"]
repository = "https://github.com/vvasconceloss/the-manager.git"
default-run = "the-manager"

[lib]
name = "the_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"
tauri = { version = "2", features = [] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }

rand = "0.10.1"
thiserror = "2"
rayon = "1.12.0"
chrono = "0.4.44"

rusqlite_migration = "1.0.2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0
strip = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
panic = "abort"
